# workflow-weaver

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md
src/: main.py
src/workflow_weaver/: cli.py
tests/: test_smoke.py
