[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-weaver"
version = "0.1.0"
description = "Composable workflow planner for chained agents"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
workflow-weaver = "workflow_weaver.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
